[package]
name = "transactron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
thiserror = "1.0"
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
tokio = { version = "1.20", features = ["full"] }
serde = { version = "1", features = ["derive"] }